apps/overlays/dev/patch/sample-view/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-view
  labels:
    app: dev-sample-view
spec:
  selector:
    matchLabels:
      deployment: dev-sample-view
  template:
    metadata:
      labels:
        deployment: dev-sample-view
        app: dev-sample-view
    spec:
      containers:
        - name: sample-view
          image: image-registry.openshift-image-registry.svc:5000/rhn-support-jiadchen-dev/sample-view:7ba6676a4d50f648d85e8610f196688b2dc641e9
