apps/overlays/dev/patch/sample-view/development.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sample-view
  labels:
    app: sample-view
spec:
  template:
    spec:
      containers:
        - name: sample-view
