apps/overlays/dev/patch/sample-view/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sample-view
  labels:
    app: dev-sample-view
spec:
  selector:
    deployment: dev-sample-view
