apps/overlays/dev/patch/sample-view/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: sample-view
  labels:
    app: dev-sample-view
spec:
  to:
    kind: Service
    name: dev-sample-view
